Name:               yaml-config
Version:            0.3.0
Synopsis:           Configuration management
Description:        Configuration management
License:            MIT
License-file:       LICENSE
Copyright:          Selectel
Author:             Fedor Gogolev <knsd@knsd.net>
                    Mitroshin Maxim <mitroshin@selectel.org>
                    Simon Hengel <sol@typeful.net>
Maintainer:         mitroshin@selectel.org
Category:           Configuration
Build-type:         Simple
Cabal-version:      >= 1.14
Tested-with:        GHC == 7.6.*

Library
  Hs-source-dirs:   src
  Default-language: Haskell2010
  Ghc-options:      -Wall -fno-warn-orphans
  Build-depends:    base                       >= 4.5.0 && < 5.0.0
                  , deepseq                    >= 1.3
                  , unordered-containers       >= 0.2.0
                  , text                       >= 0.11.0
                  , yaml                       >= 0.8.10
                  , failure                    >= 0.2.0

  Exposed-modules:  Data.Yaml.Config
                    Data.Yaml.Config.Internal

Test-suite yaml-config-tests
  Main-is:          Tests.hs
  Hs-source-dirs:   src, tests
  Default-language: Haskell2010
  Type:             exitcode-stdio-1.0

  Build-depends:    base                       >= 4.5.0 && < 5.0.0
                  , deepseq                    >= 1.3
                  , unordered-containers       >= 0.2.0
                  , text                       >= 0.11.0
                  , yaml                       >= 0.8.10
                  , failure                    >= 0.2.0

                  , hashable                   >= 1.2.0
                  , tasty                      >= 0.10.0
                  , tasty-quickcheck           >= 0.8.0
                  , QuickCheck                 >= 2.6.0

Source-repository head
    Type:     git
    Location: https://github.com/selectel/yaml-config
